implemented close assignment caused by loss
