# swagger/openapi.yaml
@@ -322,6 +322,22 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Assignment'
+  /assignment/publication-lost/{uuid}:
+    post:
+      tags:
+        - Assignment
+      summary: mark the assignment as lost
+      operationId: publicationLostAssignment
+      parameters:
+        - name: uuid
+          in: path
+          description: Uuid of the assignment
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful assignment
   /overdue-notice:
     get:
       tags:
@@ -345,26 +361,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/OverdueNotice'
-  /overdue-notice/{uuid}:
-    delete:
-      tags:
-        - Overdue notice
-      summary: Delete a overdue notice caused by loss
-      operationId: deleteOverdueNotice
-      parameters:
-        - name: uuid
-          in: path
-          description: Uuid of the overdue notice
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: string
   /overdue-notice/warning/{overdueNoticeUuid}:
     post:
       tags:
@@ -743,8 +739,6 @@ components:
       type: object
       properties:
         uuid:
-          type: string
-        overdueNoticeUuid:
           type: string
         warningDate:
           type: string
